--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   google.charts.load('current', { packages:['table'] });
   google.charts.setOnLoadCallback(init);
 
-  const SHEET_URL = "PASTE_YOUR_GOOGLE_SHEET_URL_HERE";
+  const SHEET_URL = "https://docs.google.com/spreadsheets/d/179_3BEpwPIt1kSFgQYb5SzdxkmNYVQpsyFNFN38_l-E/edit?resourcekey=&gid=1247592058#gid=1247592058";
   const DATA_START_COL = 7; // Column H (26 Jan)
 
   let sheetData;
